# analog_gauge_reader

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  LICENSE.md  README.md  common.py  evaluation.py  evaluation_file.ipynb  evaluation_file_gen.py  evaluations.sh  evalutation.py  experiments.sh  full_evaluations.sh  package.xml  pipeline.py  plots.py  poetry.toml  pyproject.toml  ros_node.py  setup.py
angle_reading_fit/: angle_converter.py  line_fit.py
dependencies/: abinet_20e_st-an_mj_20221005_012617-ead8c139.pth  dbnet_resnet18_fpnc_1200e_icdar2015_20220825_221614-7c0e94f2.pth  mmcv-2.0.0-cp38-cp38-manylinux1_x86_64.whl
evaluation/: README.md  constants.py  eval_plots.py  evaluation.py  evaluation_file.ipynb  evaluation_file_gen.py  full_evaluation.py  rotate_test_imgs.ipynb
gauge detection/: README.md  detection_training_colab.ipynb
gauge_detection/: README.md  detection_inference.py  detection_training_local.py  filestructure_detection_training.ipynb
geometry/: angle_converter.py  ellipse.py  ellipse_demo.ipynb  warp_ellipse.py
key_point_detection/: README.md  heatmap_generation.py  key_point_dataset.py  key_point_extraction.py  key_point_inference.py  key_point_validator.py  model.py  train.py
key_point_detection/data_preparation/: crop_resize_images_keypoint_training.ipynb  heatmap_generation.py
launch/: analog_gauge_reader.launch
models/: gauge_detection_model.pt  key_point_model.pt  segmentation_model.pt
msg/: GaugeReading.msg  GaugeReadings.msg
ocr/: README.md  ocr_inference.py  ocr_inference_colab.ipynb  ocr_reading.py  rotation_experiment.ipynb
scripts/: analog_gauge_reader_ros.sh  analog_gauge_reader_ros_poetry.sh
segmentation/: README.md  line_fit_test.ipynb  segmenation_inference.py
srv/: GaugeReader.srv
